# amctl-template-ambot

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/amctl/templ/ambot/: .gitignore.pre  __init__.py  bot.py.tmpl.pre  pyproject.toml.tmpl
src/amctl/templ/ambot/plugins/: __init__.py.pre
