[project]
name = "amctl-template-ambot"
version = "0.1.3"
description = "AmritaBot deployment template"
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = ["amctl>=0.1.2"]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]
include = ["amctl", "amctl.*"]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
    "pyright>=1.1.407",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "C4",    # flake8-comprehensions
    "I",     # isort
]

[tool.amctl.project]
project-type = "amctl_template"
version = "0.1.1"
created_at = "2026-06-13T08:12:45.279885+00:00"

[tool.amctl.scripts]
lint = "uv run ruff check . --fix"
sync = "uv sync"
format = "uv run ruff format ."